Update lists at 20240517-0600

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -120,9 +120,9 @@ allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::2;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
@@ -163,6 +163,7 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:13:3176:77cb:5e2e:88b6;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
