--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -184,6 +184,7 @@ set_real_ip_from 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
+set_real_ip_from 2605:6400:30:efb2::;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
