Update lists at 20240517-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,7 +122,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::1;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -361,7 +360,6 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
-allow 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e03::f03c:94ff:fe7d:8250;
 allow 2a02:16d0:0:5::1;
@@ -680,6 +678,19 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:197a::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
+allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
+allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
