--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -25,6 +25,7 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
+allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
@@ -51,9 +52,12 @@ allow 107.189.1.175;
 allow 107.189.1.198;
 allow 107.189.12.3;
 allow 107.189.12.7;
+allow 107.189.12.88;
 allow 107.189.13.180;
+allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
+allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
 allow 107.189.14.43;
@@ -63,6 +67,7 @@ allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.2.248;
 allow 107.189.28.199;
+allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -152,7 +157,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.138.161.171;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.202;
 allow 162.251.5.152;
@@ -599,6 +603,19 @@ allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.173;
+allow 193.189.100.194;
+allow 193.189.100.195;
+allow 193.189.100.196;
+allow 193.189.100.197;
+allow 193.189.100.198;
+allow 193.189.100.199;
+allow 193.189.100.200;
+allow 193.189.100.201;
+allow 193.189.100.202;
+allow 193.189.100.203;
+allow 193.189.100.204;
+allow 193.189.100.205;
+allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
@@ -653,6 +670,7 @@ allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.248.184;
+allow 199.195.249.214;
 allow 199.195.250.165;
 allow 199.195.250.18;
 allow 199.195.250.46;
@@ -900,6 +918,7 @@ allow 205.185.113.180;
 allow 205.185.115.216;
 allow 205.185.116.34;
 allow 205.185.117.149;
+allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
@@ -907,12 +926,14 @@ allow 205.185.124.193;
 allow 205.185.127.231;
 allow 207.154.227.3;
 allow 209.141.32.198;
+allow 209.141.37.94;
 allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
 allow 209.141.51.217;
 allow 209.141.51.30;
+allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
@@ -967,7 +988,6 @@ allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::1;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1207,7 +1227,6 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
-allow 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e03::f03c:94ff:fe7d:8250;
 allow 2a02:16d0:0:5::1;
@@ -1526,6 +1545,19 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:197a::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
+allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
+allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
@@ -1563,7 +1595,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.208.124.36;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1610,6 +1641,7 @@ allow 45.33.20.42;
 allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
+allow 45.61.186.203;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1697,8 +1729,11 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 5.2.72.110;
+allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.161.166.250;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1723,7 +1758,6 @@ allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
 allow 74.82.47.194;
@@ -1775,7 +1809,6 @@ allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
 allow 85.93.218.204;
-allow 87.101.92.171;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
@@ -1826,7 +1859,6 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.119.126.163;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
