--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -122,7 +122,6 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
@@ -361,7 +360,6 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
-deny 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e03::f03c:94ff:fe7d:8250;
 deny 2a02:16d0:0:5::1;
@@ -680,6 +678,19 @@ deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:197a::1;
 deny 2a0f:85c1:356:578f::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:df00:0:255::194;
+deny 2a0f:df00:0:255::195;
+deny 2a0f:df00:0:255::196;
+deny 2a0f:df00:0:255::197;
+deny 2a0f:df00:0:255::198;
+deny 2a0f:df00:0:255::199;
+deny 2a0f:df00:0:255::200;
+deny 2a0f:df00:0:255::201;
+deny 2a0f:df00:0:255::202;
+deny 2a0f:df00:0:255::203;
+deny 2a0f:df00:0:255::204;
+deny 2a0f:df00:0:255::205;
+deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
