--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -93,6 +93,7 @@ allow 107.189.7.161;
 allow 107.189.7.168;
 allow 107.189.7.47;
 allow 107.189.8.133;
+allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
@@ -988,6 +989,7 @@ allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1595,6 +1597,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.196.187.92;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1733,7 +1736,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.161.166.250;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1758,6 +1760,7 @@ allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
 allow 74.82.47.194;
