--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -93,6 +93,7 @@ deny 107.189.7.161;
 deny 107.189.7.168;
 deny 107.189.7.47;
 deny 107.189.8.133;
+deny 107.189.8.136;
 deny 107.189.8.181;
 deny 107.189.8.226;
 deny 107.189.8.238;
@@ -988,6 +989,7 @@ deny 2.58.95.31;
 deny 2.58.95.35;
 deny 2.58.95.38;
 deny 2600:3c00:e000:4ee::1;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1595,6 +1597,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.196.187.92;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1733,7 +1736,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.161.166.250;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1758,6 +1760,7 @@ deny 66.78.40.147;
 deny 66.78.40.160;
 deny 67.219.109.141;
 deny 71.19.144.106;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.253.202.121;
 deny 74.82.47.194;
