--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -95,7 +95,6 @@ allow 107.189.7.47;
 allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
-allow 107.189.8.226;
 allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
@@ -227,6 +226,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.232.209.131;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -912,7 +912,6 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
-allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1095,7 +1094,6 @@ allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
-allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -1209,7 +1207,6 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1231,6 +1228,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e03::f03c:94ff:fe7d:8250;
+allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1597,7 +1595,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.196.187.92;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1707,7 +1704,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 52.140.33.255;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1812,6 +1808,7 @@ allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
 allow 85.93.218.204;
+allow 86.104.194.13;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
@@ -1835,7 +1832,6 @@ allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
-allow 89.36.231.207;
 allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
