--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -95,6 +95,7 @@ allow 107.189.7.47;
 allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
+allow 107.189.8.226;
 allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
@@ -119,7 +120,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -226,7 +226,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.232.209.131;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -797,7 +796,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -912,6 +910,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1094,6 +1093,7 @@ allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
+allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -1207,6 +1207,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1703,7 +1704,9 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 52.140.33.255;
+allow 52.200.66.44;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1806,6 +1809,7 @@ allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
+allow 85.209.133.112;
 allow 85.215.76.62;
 allow 85.93.218.204;
 allow 86.104.194.13;
