--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,7 +112,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -228,6 +227,7 @@ deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
+deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -341,6 +341,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
