Update lists at 20240518-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -211,7 +211,6 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
-allow 178.218.144.96;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -816,6 +815,7 @@ allow 204.85.191.9;
 allow 204.8.96.100;
 allow 204.8.96.101;
 allow 204.8.96.102;
+allow 204.8.96.103;
 allow 204.8.96.104;
 allow 204.8.96.105;
 allow 204.8.96.106;
@@ -1116,6 +1116,7 @@ allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
+allow 2620:7:6001::103;
 allow 2620:7:6001::104;
 allow 2620:7:6001::105;
 allow 2620:7:6001::106;
@@ -1541,7 +1542,6 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:178::;
 allow 2a0e:97c0:470::30;
-allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1587,6 +1587,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.234.192.188;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1736,7 +1737,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 52.87.93.40;
 allow 5.34.182.203;
 allow 5.42.66.6;
 allow 5.42.80.232;
