--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -248,6 +248,7 @@ deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f530:8002::19;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
+deny 2620:7:6001::103;
 deny 2620:7:6001::104;
 deny 2620:7:6001::105;
 deny 2620:7:6001::106;
@@ -672,7 +673,6 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:178::;
 deny 2a0e:97c0:470::30;
-deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
