--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -248,6 +248,7 @@ allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
+allow 2620:7:6001::103;
 allow 2620:7:6001::104;
 allow 2620:7:6001::105;
 allow 2620:7:6001::106;
@@ -672,7 +673,6 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:178::;
 allow 2a0e:97c0:470::30;
-allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
