--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -211,7 +211,6 @@ deny 178.20.55.182;
 deny 178.218.144.18;
 deny 178.218.144.51;
 deny 178.218.144.64;
-deny 178.218.144.96;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -816,6 +815,7 @@ deny 204.85.191.9;
 deny 204.8.96.100;
 deny 204.8.96.101;
 deny 204.8.96.102;
+deny 204.8.96.103;
 deny 204.8.96.104;
 deny 204.8.96.105;
 deny 204.8.96.106;
@@ -1116,6 +1116,7 @@ deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f530:8002::19;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
+deny 2620:7:6001::103;
 deny 2620:7:6001::104;
 deny 2620:7:6001::105;
 deny 2620:7:6001::106;
@@ -1541,7 +1542,6 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:178::;
 deny 2a0e:97c0:470::30;
-deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
@@ -1587,6 +1587,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
+deny 3.234.192.188;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1736,7 +1737,6 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 52.87.93.40;
 deny 5.34.182.203;
 deny 5.42.66.6;
 deny 5.42.80.232;
