--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -211,7 +211,6 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
-set_real_ip_from 178.218.144.96;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -816,6 +815,7 @@ set_real_ip_from 204.85.191.9;
 set_real_ip_from 204.8.96.100;
 set_real_ip_from 204.8.96.101;
 set_real_ip_from 204.8.96.102;
+set_real_ip_from 204.8.96.103;
 set_real_ip_from 204.8.96.104;
 set_real_ip_from 204.8.96.105;
 set_real_ip_from 204.8.96.106;
@@ -1116,6 +1116,7 @@ set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
+set_real_ip_from 2620:7:6001::103;
 set_real_ip_from 2620:7:6001::104;
 set_real_ip_from 2620:7:6001::105;
 set_real_ip_from 2620:7:6001::106;
@@ -1541,7 +1542,6 @@ set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:6a80:3:178::;
 set_real_ip_from 2a0e:97c0:470::30;
-set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
@@ -1587,6 +1587,7 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.234.192.188;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1736,7 +1737,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 52.87.93.40;
 set_real_ip_from 5.34.182.203;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
