--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -248,6 +248,7 @@ set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
+set_real_ip_from 2620:7:6001::103;
 set_real_ip_from 2620:7:6001::104;
 set_real_ip_from 2620:7:6001::105;
 set_real_ip_from 2620:7:6001::106;
@@ -672,7 +673,6 @@ set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:6a80:3:178::;
 set_real_ip_from 2a0e:97c0:470::30;
-set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
