Update lists at 20240518-2100

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -121,11 +121,12 @@ deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
-deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
+deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
@@ -137,7 +138,6 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
-deny 2602:ffc5:105:302::313d:48d9;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
