--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.28.8.185;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -182,6 +181,7 @@ allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.104.243.155;
 allow 172.105.161.162;
+allow 172.232.164.52;
 allow 172.234.33.174;
 allow 172.235.36.50;
 allow 172.81.131.110;
@@ -989,11 +989,12 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
+allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
@@ -1005,7 +1006,6 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
-allow 2602:ffc5:105:302::313d:48d9;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1586,6 +1586,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.225.24.208;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1755,7 +1756,6 @@ allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
-allow 66.11.123.224;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.147;
