--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -63,7 +63,6 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
-allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.2.248;
 allow 107.189.28.199;
@@ -200,7 +199,6 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
 allow 178.162.209.56;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -912,6 +910,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -972,6 +971,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.21.234.108;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1210,6 +1210,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1221,7 +1222,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1585,7 +1585,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 3.224.143.237;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1678,6 +1677,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.226.164.14;
@@ -1805,7 +1805,6 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.247.165.51;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
