--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -63,7 +63,6 @@ deny 107.189.14.4;
 deny 107.189.14.43;
 deny 107.189.1.80;
 deny 107.189.1.9;
-deny 107.189.1.96;
 deny 107.189.2.108;
 deny 107.189.2.248;
 deny 107.189.28.199;
@@ -200,7 +199,6 @@ deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.97.114.202;
 deny 178.162.209.56;
-deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -912,6 +910,7 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
+deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -972,6 +971,7 @@ deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
 deny 23.155.8.104;
+deny 23.21.234.108;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -1210,6 +1210,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 27.255.75.198;
@@ -1221,7 +1222,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
-deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
@@ -1585,7 +1585,6 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
-deny 3.224.143.237;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1678,6 +1677,7 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.230;
 deny 45.95.169.255;
+deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.226.164.14;
@@ -1805,7 +1805,6 @@ deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
-deny 84.247.165.51;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
