--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.24.231.105;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -127,7 +128,6 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
-set_real_ip_from 134.122.66.38;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -159,7 +159,18 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
+set_real_ip_from 162.247.74.200;
+set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
+set_real_ip_from 162.247.74.204;
+set_real_ip_from 162.247.74.206;
+set_real_ip_from 162.247.74.213;
+set_real_ip_from 162.247.74.216;
+set_real_ip_from 162.247.74.217;
+set_real_ip_from 162.247.74.27;
+set_real_ip_from 162.247.74.7;
+set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
@@ -167,7 +178,6 @@ set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
-set_real_ip_from 168.100.11.212;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
@@ -240,6 +250,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.144.11;
@@ -480,6 +491,12 @@ set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
 set_real_ip_from 185.220.101.99;
+set_real_ip_from 185.220.103.4;
+set_real_ip_from 185.220.103.5;
+set_real_ip_from 185.220.103.6;
+set_real_ip_from 185.220.103.7;
+set_real_ip_from 185.220.103.8;
+set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
@@ -911,6 +928,7 @@ set_real_ip_from 204.8.96.83;
 set_real_ip_from 204.8.96.84;
 set_real_ip_from 204.8.96.85;
 set_real_ip_from 204.8.96.86;
+set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
@@ -929,6 +947,7 @@ set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.38.110;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.217;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
@@ -1002,6 +1021,7 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
@@ -1208,6 +1228,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
 set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 27.255.75.198;
@@ -1582,7 +1603,6 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.228.120.198;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
