Update lists at 20240520-0600

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -347,6 +347,8 @@ deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
+deny 2a00:1169:11d:10::;
+deny 2a00:1169:11d:db80::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
