--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -347,6 +347,8 @@ allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:1169:11d:10::;
+allow 2a00:1169:11d:db80::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
