Update lists at 20240520-1200

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -127,6 +127,7 @@ allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:81a6::1;
@@ -342,7 +343,6 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2800:ba0:6:c1::4858;
@@ -359,7 +359,6 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
-allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
