--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -282,6 +282,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -508,7 +509,6 @@ deny 185.241.208.196;
 deny 185.241.208.202;
 deny 185.241.208.204;
 deny 185.241.208.206;
-deny 185.241.208.212;
 deny 185.241.208.54;
 deny 185.241.208.71;
 deny 185.243.218.110;
@@ -533,7 +533,6 @@ deny 185.247.184.105;
 deny 185.247.184.33;
 deny 185.252.232.218;
 deny 185.254.196.141;
-deny 185.26.120.79;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
@@ -556,7 +555,6 @@ deny 188.68.52.231;
 deny 190.103.179.98;
 deny 190.120.229.98;
 deny 190.211.254.97;
-deny 191.101.217.39;
 deny 191.252.220.31;
 deny 191.96.165.34;
 deny 192.42.116.14;
@@ -928,7 +926,6 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
-deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -998,6 +995,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -1021,6 +1019,7 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:12:81a6::1;
@@ -1236,7 +1235,6 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
-deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 27.255.75.198;
@@ -1254,7 +1252,6 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
-deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c506::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1735,7 +1732,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.2.108.17;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1766,6 +1762,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.165.166.99;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
