Update lists at 20240521-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -222,6 +223,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
+allow 178.218.144.99;
 allow 178.30.120.43;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -498,7 +500,6 @@ allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.225.69.203;
-allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
@@ -508,6 +509,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.212;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
@@ -811,6 +813,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -924,6 +927,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1232,6 +1236,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1620,6 +1625,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.194.47.99;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1755,7 +1761,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.175.30.214;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1775,6 +1780,7 @@ allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 66.146.193.33;
+allow 66.220.242.222;
 allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
