--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -275,10 +276,12 @@ allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.146.232.243;
+allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -633,7 +636,6 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
-allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -810,6 +812,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -898,8 +901,8 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
+allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -921,7 +924,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1113,6 +1115,7 @@ allow 2a03:94e0:24d4::6;
 allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
+allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -1391,7 +1394,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1428,6 +1430,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.207.196.185;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1528,7 +1531,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.44.223.8;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
