--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,6 +111,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -124,7 +125,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -315,6 +315,7 @@ allow 2a03:94e0:24d4::6;
 allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
+allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -593,7 +594,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
