--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.28.200.156;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 103.109.101.105;
@@ -195,7 +196,6 @@ set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
-set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.230.142.131;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
@@ -256,6 +256,7 @@ set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
+set_real_ip_from 185.117.215.9;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -281,7 +282,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -901,6 +901,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
@@ -924,6 +925,7 @@ set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1179,6 +1181,7 @@ set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:11:7::2;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:8781::9;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1430,13 +1433,11 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.207.196.185;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
-set_real_ip_from 45.134.173.197;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
@@ -1514,6 +1515,8 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 50.116.60.12;
+set_real_ip_from 50.3.182.133;
+set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
