Update lists at 20240524-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 100.27.125.49;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 103.109.101.105;
@@ -99,7 +100,6 @@ deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
-deny 107.21.45.84;
 deny 108.181.124.143;
 deny 108.181.27.205;
 deny 108.181.69.243;
@@ -201,7 +201,6 @@ deny 173.232.195.144;
 deny 173.232.195.146;
 deny 173.249.57.253;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.97.114.202;
@@ -1386,6 +1385,7 @@ deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
+deny 2a0e:fa00:0:d0::1;
 deny 2a0f:85c1:356:197a::1;
 deny 2a0f:85c1:356:578f::1;
 deny 2a0f:93c1:26:1f2::9ce5;
