--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -274,6 +274,8 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
+allow 2a02:898:218::1;
+allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
