--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -205,7 +205,6 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
 allow 178.162.209.56;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -903,7 +902,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -927,7 +925,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1061,7 +1058,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1377,6 +1373,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:6a80:3:23::;
 allow 2a0e:6a80:3:e5::;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1497,6 +1494,7 @@ allow 45.79.50.161;
 allow 45.79.66.123;
 allow 45.80.158.205;
 allow 45.80.158.27;
+allow 45.82.121.105;
 allow 45.82.121.182;
 allow 45.82.122.154;
 allow 45.8.22.207;
@@ -1569,8 +1567,8 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 52.87.2.59;
 allow 5.34.182.203;
+allow 54.147.81.138;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
