--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -845,7 +845,6 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
-deny 207.154.227.3;
 deny 207.188.141.102;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -902,6 +901,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -925,6 +925,7 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1423,6 +1424,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
+deny 34.199.243.158;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1568,7 +1570,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.147.81.138;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
