Update lists at 20240526-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -120,7 +120,6 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
-deny 118.163.74.160;
 deny 121.78.28.175;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -816,7 +815,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -1380,6 +1378,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
+deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:23::;
 deny 2a0e:6a80:3:e5::;
 deny 2a0e:97c0:470::30;
@@ -1430,6 +1429,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
+deny 34.224.24.65;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1575,7 +1575,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.210.30.228;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1708,6 +1707,7 @@ deny 91.92.109.43;
 deny 92.133.238.108;
 deny 92.243.24.163;
 deny 92.246.138.145;
+deny 92.246.84.133;
 deny 92.249.48.222;
 deny 93.123.12.112;
 deny 93.90.74.31;
