--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,7 +111,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -573,6 +572,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:23::;
 allow 2a0e:6a80:3:e5::;
 allow 2a0e:97c0:470::30;
