Update lists at 20240529-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -638,7 +639,6 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
-allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -816,6 +816,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -908,7 +909,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -932,7 +932,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1169,6 +1168,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
@@ -1406,7 +1406,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1428,7 +1427,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 34.225.29.114;
+allow 3.232.63.223;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1648,6 +1647,7 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.54.51.61;
+allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.209.133.112;
