Update lists at 20240529-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -17,6 +17,7 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
+allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
@@ -98,7 +99,6 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 107.22.160.210;
 allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
@@ -396,6 +396,7 @@ allow 185.220.101.172;
 allow 185.220.101.173;
 allow 185.220.101.174;
 allow 185.220.101.175;
+allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
@@ -827,7 +828,6 @@ allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
 allow 202.61.226.98;
-allow 202.61.252.121;
 allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -859,7 +859,6 @@ allow 209.141.37.94;
 allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -873,7 +872,6 @@ allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
-allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -1038,6 +1036,7 @@ allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1052,7 +1051,6 @@ allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:f530:8002::19;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
@@ -1105,7 +1103,6 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
-allow 2a03:4000:55:efb::a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1262,6 +1259,7 @@ allow 2a0b:f4c2:1::172;
 allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
+allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
@@ -1380,6 +1378,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:23::;
 allow 2a0e:6a80:3:e5::;
 allow 2a0e:97c0:470::30;
@@ -1430,6 +1429,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 34.226.63.122;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1709,6 +1709,7 @@ allow 91.92.109.43;
 allow 92.133.238.108;
 allow 92.243.24.163;
 allow 92.246.138.145;
+allow 92.246.84.133;
 allow 92.249.48.222;
 allow 93.123.12.112;
 allow 93.90.74.31;
