--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -230,6 +230,7 @@ deny 2605:6400:30:f7ca::2;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -244,7 +245,6 @@ deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:f530:8002::19;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
 deny 2620:7:6001::186;
@@ -296,7 +296,6 @@ deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
-deny 2a03:4000:55:efb::a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -453,6 +452,7 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
+deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
@@ -571,6 +571,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
+deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:23::;
 deny 2a0e:6a80:3:e5::;
 deny 2a0e:97c0:470::30;
