--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -17,6 +17,7 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
@@ -98,7 +99,6 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
-set_real_ip_from 107.22.160.210;
 set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
@@ -396,6 +396,7 @@ set_real_ip_from 185.220.101.172;
 set_real_ip_from 185.220.101.173;
 set_real_ip_from 185.220.101.174;
 set_real_ip_from 185.220.101.175;
+set_real_ip_from 185.220.101.176;
 set_real_ip_from 185.220.101.177;
 set_real_ip_from 185.220.101.178;
 set_real_ip_from 185.220.101.179;
@@ -827,7 +828,6 @@ set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
-set_real_ip_from 202.61.252.121;
 set_real_ip_from 202.94.246.210;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
@@ -859,7 +859,6 @@ set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.38.110;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -873,7 +872,6 @@ set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
-set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -1038,6 +1036,7 @@ set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1052,7 +1051,6 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
-set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
@@ -1105,7 +1103,6 @@ set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
-set_real_ip_from 2a03:4000:55:efb::a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1262,6 +1259,7 @@ set_real_ip_from 2a0b:f4c2:1::172;
 set_real_ip_from 2a0b:f4c2:1::173;
 set_real_ip_from 2a0b:f4c2:1::174;
 set_real_ip_from 2a0b:f4c2:1::175;
+set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
@@ -1380,6 +1378,7 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
+set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:6a80:3:23::;
 set_real_ip_from 2a0e:6a80:3:e5::;
 set_real_ip_from 2a0e:97c0:470::30;
@@ -1430,6 +1429,7 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.226.63.122;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1709,6 +1709,7 @@ set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.133.238.108;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
+set_real_ip_from 92.246.84.133;
 set_real_ip_from 92.249.48.222;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.90.74.31;
