Update lists at 20240531-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -140,7 +141,6 @@ deny 143.110.156.176;
 deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.73.11;
-deny 144.172.73.6;
 deny 144.217.80.80;
 deny 146.59.234.220;
 deny 146.59.35.246;
@@ -213,7 +213,6 @@ deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.131.141;
-deny 178.175.142.26;
 deny 178.175.148.209;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -906,6 +905,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -929,6 +929,7 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1421,13 +1422,12 @@ deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c814::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
-deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 3.219.39.189;
+deny 3.222.193.65;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
