Update lists at 20240531-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -259,7 +259,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -617,5 +616,6 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
+allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
