--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -141,6 +140,7 @@ set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.73.11;
+set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -207,7 +207,6 @@ set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.209.56;
-set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -221,7 +220,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.116.115;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -866,6 +864,7 @@ set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
+set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
@@ -1064,7 +1063,6 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
-set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1422,12 +1420,13 @@ set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:f0a8::2;
+set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.222.193.65;
+set_real_ip_from 34.206.231.17;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1518,6 +1517,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.195.107.124;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
